syntax = "proto3";

package search;

service search {
    rpc CreateFile(File) returns (CreateFileResponse) {}
    rpc Search(SearchRequest) returns (SearchResponse) {}
    rpc Delete(DeleteRequest) returns (DeleteResponse) {}
    rpc Update(File) returns (UpdateResponse) {}
}

message UpdateResponse {
    string id = 1;
}

message DeleteRequest {
    string id = 1;
}

message DeleteResponse {
    string id = 1;
}

message File {
    string id = 1;
    string key = 2;
    string name = 3;
    string type = 4;
    string description = 5;
    string ownerID = 6;
    int64 size = 7;
    oneof fileOrId {
        string parent = 8;
        File parentObject = 9;
    }
    string bucket = 10;
    int64 createdAt = 11;
    int64 updatedAt = 12;
    repeated File children = 13; 
}
  
message CreateFileResponse {
    string id = 1;
}

message SearchRequest {
    string term = 1;
}

message SearchResponse {
    repeated string ids = 1;
}
